# cli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cli.py  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
src/wowless/: cli.py
