[metadata]
name = wowless-cli
version = 0.0.4
author = Ferronn
author_email = ferronn@ferronn.dev
description = CLI for wowless
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wowless-dev/cli
project_urls =
    Bug Tracker = https://github.com/wowless-dev/cli/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.6
install_requires =
    click
    requests

[options.entry_points]
console_scripts =
    wowless = wowless.cli:run

[options.packages.find]
where = src
