[metadata]
name = wowless_cli
description = CLI for wowless
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wowless-dev/cli
author = Ferronn
author_email = ferronn@ferronn.dev
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = https://github.com/wowless-dev/cli/issues

[options]
packages = find_namespace:
install_requires =
    click
    progress
    requests
python_requires = >=3.6
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wowless = wowless.cli:wowless
